clean pom file